fix(css): revision container and overlay spacing

--- a/src/core/container/container.less
+++ b/src/core/container/container.less
@@ -12,16 +12,8 @@
 // space
 
 .container-space {
-  padding-right: 1.5rem;
-  padding-left: 1.5rem;
-  @media @min-xxs {
-    padding-right: 2rem;
-    padding-left: 2rem;
-  }
-  @media @min-xs {
-    padding-right: 3rem;
-    padding-left: 3rem;
-  }
+  padding-right: 2rem;
+  padding-left: 2rem;
   @media @min-sm {
     padding-right: 3rem;
     padding-left: 3rem;
@@ -31,12 +23,12 @@
     padding-left: 4rem;
   }
   @media @min-lg {
-    padding-right: 5rem;
-    padding-left: 5rem;
-  }
-  @media @min-xl {
     padding-right: 6rem;
     padding-left: 6rem;
+  }
+  @media @min-xl {
+    padding-right: 8rem;
+    padding-left: 8rem;
   }
 }
 
