--- a/src/core/overlay/overlay.less
+++ b/src/core/overlay/overlay.less
@@ -68,24 +68,18 @@
 
 .overlay-space {
   // same as .container-space
-  padding: 1.5rem;
-  @media @min-xxs {
-    padding: 2rem;
-  }
-  @media @min-xs {
-    padding: 3rem;
-  }
+  padding: 1rem;
   @media @min-sm {
-    padding: 3rem;
+    padding: 1.5rem;
   }
   @media @min-md {
-    padding: 4rem;
+    padding: 2rem;
   }
   @media @min-lg {
-    padding: 5rem;
+    padding: 3rem;
   }
   @media @min-xl {
-    padding: 6rem;
+    padding: 4rem;
   }
 }
 
